tests/errors/2014-4.vb
'#compiler-options:/optioncompare:xxx
'#compiler-message:Command line error BC2014 : the value 'xxx' is invalid for option 'optioncompare'
'#exit-code:1